force-app/main/default/objects/Consent__c/Consent__c.object-meta.xml
<CustomObject>
    <description>GDPR Article 7 - Consent Management. Tracks all consent records with versioning.</description>
    <label>Consent</label>
    <nameField>
        <displayFormat>CONSENT-{00000}</displayFormat>
        <label>Consent Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>