force-app/main/default/objects/Consent__c/fields/Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Date__c</fullName>
    <description>Date consent was given or updated</description>
    <label>Consent Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>