force-app/main/default/objects/Consent__c/fields/Consent_Type__c.field-meta.xml
<CustomField>
    <fullName>Consent_Type__c</fullName>
    <description>Type of consent being tracked</description>
    <label>Consent Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing Communications</fullName>
            </value>
            <value>
                <fullName>Data Processing</fullName>
            </value>
            <value>
                <fullName>Third Party Sharing</fullName>
            </value>
            <value>
                <fullName>Profiling</fullName>
            </value>
            <value>
                <fullName>Automated Decision Making</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>