force-app/main/default/objects/Consent__c/fields/Consent_Version__c.field-meta.xml
<CustomField>
    <fullName>Consent_Version__c</fullName>
    <description>Version of the consent form/policy</description>
    <label>Consent Version</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>