force-app/main/default/objects/Consent__c/fields/Consent_Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Consent_Withdrawn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether consent has been withdrawn</description>
    <label>Consent Withdrawn</label>
    <type>Checkbox</type>
</CustomField>