force-app/main/default/objects/Consent__c/fields/Withdrawal_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Date__c</fullName>
    <description>Date consent was withdrawn</description>
    <label>Withdrawal Date</label>
    <type>DateTime</type>
</CustomField>